--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="card">
       <div class="imgBx">
-        <img src="https://media.licdn.com/dms/image/D4D35AQE1GyA6bBjb7Q/profile-framedphoto-shrink_800_800/0/1694529497084?e=1698418800&v=beta&t=5i6XNMdVB6voxH2G-JyXGbkO3lmlLulVez2rSFv1RM4" alt="Luis Frutos"/>
+        <img src="./assets/me.png" alt="Luis Frutos"/>
       </div>
       <div class="content">
         <div class="details">
