--- a/index.html
+++ b/index.html
@@ -1,28 +1,124 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Luis Frutos - Front-end Developer</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  </head>
-  <body>
-    <div class="card">
-      <div class="imgBx">
-        <img src="./assets/me.png" alt="Luis Frutos"/>
-      </div>
-      <div class="content">
-        <div class="details">
-          <h2>Luis Frutos<br><span>Front-end Developer</span></h2>
-          <div class="data">
-            <a href="https://www.linkedin.com/in/luis-frutos-77143421b/" target="_blank"><i class="fa-brands fa-linkedin icon"></i></a>
-            <a href="https://github.com/luisfru" target="_blank"><i class="fa-brands fa-github icon"></i></a>
-            <a href="mailto:luisfru96@gmail.com"><i class="fa-solid fa-envelope icon"></i></a>
-          </div>
-          <div class="actionsBtn">
-            <a href="./cv.pdf" target="_blank" download="luis_frutos_cv"><button>Download CV</button></a>
-          </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Here is Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+    <!--CSS-->
+    <link rel="stylesheet" href="./index.css">
+
+    <script src="./script.js"></script>
+    <title>Portfolio</title>
+</head>
+<body>
+    <!--Header-->
+    <header class="header">
+        <a href="#" class="logo">Portfolio</a>
+
+        <i class="fa-solid fa-bars" id="menu-icon"></i>
+
+        <nav class="navbar">
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
+            <a href="#portfolio">Portfolio</a>
+        </nav>
+    </header>
+
+    <!--Home Section-->
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hello, My Name is</h3>
+            <h1>Luis Frutos</h1>
+            <h3>And I'm a <span class="multiple-text"></span></h3>
+            <p>I'm a recent graduate of Communication and Multimedia Design in Spain (Front End Developer). I'm currently seeking opportunities to start my career as an Junior Front-end Developer in Rotterdam and surroundings.</p>
+            <div class="social-media">
+                <a href="https://www.linkedin.com/in/luis-frutos-77143421b/"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/luisfru"><i class="fa-brands fa-github icon"></i></a>
+                <a href="mailto:luisfru96@gmail.com"><i class="fa-solid fa-envelope icon"></i></a>
+            </div>
+            <a href="cv.pdf" class="btn" download>Download CV</a>
         </div>
-      </div>
+
+        <div class="home-img">
+            <img src="assets/profile/me-circle.png" alt=""/>
+        </div>
+    </section>
+
+    <!--About Section-->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="assets/profile/me.png" alt=""/>
+        </div>
+
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Frontend Developer</h3>
+            <p>Regarding my language skills, I don't speak Dutch but I'm fluent in English and Spanish, since my father is Spanish and my mother is English. I have, of course, the intention of learning Dutch but now I just  have a very basic level since I've been living here just for 4 months. 
+            </p>
+            <a href="#" class="btn">Read more</a>
+        </div>
+    </section>
+
+    <!--Portfolio Section-->
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">Latest <span>Projects</span></h2>
+
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <a href="https://github.com/luisfru/Email-Subscription-Form" target="_blank">
+                <img src="assets/projects/project1.png" alt=""/>
+                <div class="portfolio-layer">
+                    <h4>email subscription</h4>
+                    <p>a basic sign in email subscription</p>
+                    <i class="fa-solid fa-up-right-from-square"></i>
+                </div>
+                </a>
+            </div>
+
+            <div class="portfolio-box">
+                <a href="https://github.com/luisfru/age-calculator" target="_blank">
+                <img src="assets/projects/project2.png" alt=""/>
+                <div class="portfolio-layer">
+                    <h4>Age Calculator</h4>
+                    <p>Calculates how old are you</p>
+                    <i class="fa-solid fa-up-right-from-square"></i>
+                </div>
+                </a>
+            </div>
+
+            <div class="portfolio-box">
+                <a href="https://github.com/luisfru/FAQ-accordion" target="_blank"> 
+                <img src="assets/projects/project3.png" alt=""/>
+                <div class="portfolio-layer">
+                    <h4>FAQs</h4>
+                    <p>Just a basic question and answer</p>
+                    <i class="fa-solid fa-up-right-from-square"></i>
+                </div>
+                </a>
+            </div>
+        </div>
     </div>
-  </body>
+    </section>
+
+    <!--Footer-->
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2024 by Luis Frutos Augé | All Rights Reserved.</p>
+        </div>
+
+        <div class="footer-iconTop">
+            <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
+        </div>
+    </footer>
+    <!--Scroll Reveal-->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!--Typed JS-->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+</body>
 </html>
