--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <h3>And I'm a <span class="multiple-text"></span></h3>
             <p>I'm a recent graduate of Communication and Multimedia Design in Spain (Front End Developer). I'm currently seeking opportunities to start my career as an Junior Front-end Developer in Rotterdam and surroundings.</p>
             <div class="social-media">
-                <a href="https://www.linkedin.com/in/luis-frutos-77143421b/"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="https://github.com/luisfru"><i class="fa-brands fa-github icon"></i></a>
-                <a href="mailto:luisfru96@gmail.com"><i class="fa-solid fa-envelope icon"></i></a>
+                <a href="https://www.linkedin.com/in/luis-frutos-77143421b/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/luisfru" target="_blank"><i class="fa-brands fa-github icon"></i></a>
+                <a href="mailto:luisfru96@gmail.com" target="_blank"><i class="fa-solid fa-envelope icon"></i></a>
             </div>
-            <a href="cv.pdf" class="btn" download>Download CV</a>
+            <a href="cv.pdf" class="btn" target="_blank">Download CV</a>
         </div>
 
         <div class="home-img">
