--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="./index.css">
 
     <script src="./script.js"></script>
-    <title>Portfolio</title>
+    <title>Luis Frutos</title>
 </head>
 <body>
     <!--Header-->
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#" class="logo">Luisfru</a>
 
         <i class="fa-solid fa-bars" id="menu-icon"></i>
 
